FixedAddButton z-index added

--- a/src/components/global-components/fixed-add-button/fixedAddButton.scss
+++ b/src/components/global-components/fixed-add-button/fixedAddButton.scss
@@ -10,6 +10,7 @@
     background: $lightGrey;
     opacity: .8;
     outline: none;
+    z-index: 10000;
     .plus {
         color: $green;
         font-size: 28px;
